# Midi-gen

./: CMakeLists.txt  LICENSE  README.md
include/: markov.hpp  midi.hpp
src/: main.cpp  markov.cpp  midi.cpp
